springboot2.3.5集成druid,多数据源，lombok,单元测试

--- a/development-platform-study-ui/src/main/ui/index.html
+++ b/development-platform-study-ui/src/main/ui/index.html
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="styles/module/pick-list.css" type="text/css"/>
     <link rel="stylesheet" href="styles/module/treant.css" type="text/css"/>
     <link rel="stylesheet" href="styles/module/date-time-picker.css"/>
+    <link rel="stylesheet" href="styles/common/helloworld.css"/>
     <!-- endbuild -->
 </head>
 <body data-ng-app="HRSSEnterpriseApp" ng-controller="ApplicationController"
@@ -131,8 +132,6 @@
 <script src="modules/common/home/directives/updateLog/updateLog.js"></script>
 <script src="modules/common/directives/angular-ui-tree/angular-ui-tree.js"></script>
 <script src="modules/common/directives/ng-pick-list/ng-pick-list.js"></script>
-<script src="modules/common/directives/comCommon/comCommon.js"></script>
-<script src="modules/common/directives/comCommon/comCommonYWTB.js"></script>
 <script src="modules/common/directives/submitapply/submitapplyController.js"></script>
 <script src="modules/common/directives/submitapply/submitapplyService.js"></script>
 <script src="modules/common/directives/date-time-picker/dateTimePicker.js"></script>
@@ -154,38 +153,15 @@
 <script src="modules/common/directives/externalDirective/draggable-rows/draggable-rows.js"></script>
 <script src="modules/common/directives/person_quick_search/person_quick_search.js"></script>
 <script src="modules/common/directives/applylist-directive/apply-list-directive.js"></script>
-<script src="modules/common/directives/file-upload-directive/file-upload-directive.js"></script>
-<script src="modules/common/directives/file-upload-list-directive/file-upload-list-directive.js"></script>
-<script src="modules/common/directives/file-upload-result/file-upload-result-controller.js"></script>
-<script src="modules/common/directives/medical_quick_search/medical_quick_search.js"></script>
-<script src="modules/common/directives/medical_quick_search/medicalService.js"></script>
 <script src="modules/common/directives/menu/top/topmenu.js"></script>
 <script src="modules/common/directives/menu/left/leftmenu.js"></script>
 <script src="modules/common/directives/headerBox/header-box.js"></script>
 <script src="modules/common/directives/headerBox/childCompany/childCompany.js"></script>
-<script src="modules/common/directives/dossierUpdate/imgUpdateEntirety/imgUpdateEntirety.js"></script>
-<script src="modules/common/directives/dossierUpdate/imgUpdateMaterial/imgUpdateMaterial.js"></script>
-<script src="modules/common/directives/dossierUpdate/imgUpdateWidget/imgUpdateWidget.js"></script>
-<script src="modules/common/directives/dossierUpdate/imgUpdateCamera/imgUpdateCamera.js"></script>
-<script src="modules/common/directives/eChartDirective/echarts.js"></script>
-<script src="modules/common/directives/eChartDirective/eChartDirective.js"></script>
-<script src="modules/common/directives/dossier/dossier.js"></script>
-<script src="modules/common/directives/dossier/dossierService.js"></script>
 <script src="modules/common/directives/batch-attachment/batchAttachment.js"></script>
 <script src="modules/common/directives/batch-attachment-search/batch-attachment-search-directive.js"></script>
-<script src="modules/common/directives/receipt/receipt.js"></script>
-<script src="modules/common/directives/receipt/receiptService.js"></script>
-<script src="modules/common/directives/dossierUpdate/imageCompress2/imageCompress2.js"></script>
-<script src="modules/common/directives/dossierUpdate/imageCompress2/imageCompressService.js"></script>
 <!--tree-->
 <script src="modules/common/directives/tree/tree/tree-unit.js"></script>
 <script src="modules/common/directives/tree/tree/tree.js"></script>
-<!--progressSign-->
-<script src="modules/common/directives/progressSign/progressSign.js"></script>
-<script src="modules/common/directives/progressSign/progressItem.js"></script>
-
-<script src="modules/common/directives/admin_region_quick_search/admin_region_quick_search.js"></script>
-<script src="modules/common/directives/admin_region_quick_search/adminService.js"></script>
 
 <script src="modules/common/directives/attach-upload-list-directive/attach-upload-list-directive.js"></script>
 <script src="modules/common/directives/attach-upload-list-directive/attach-upload-list-service.js"></script>
@@ -194,6 +170,9 @@
 <script src="modules/common/unemp/passwordModify.js"></script>
 <script src="modules/common/unemp/routes.js"></script>
 
+<!--学习1-->
+<script src="modules/study1/helloworld.js"></script>
+<script src="modules/study1/routes.js"></script>
 
 <script src="modules/common/directives/tree/treeDemo/treeDemo.js"></script>
 <!--优化图片预览功能-->
