--- a/development-platform-study-ui/src/main/ui/modules/common/home/directives/companyProfile/companyProfile.html
+++ b/development-platform-study-ui/src/main/ui/modules/common/home/directives/companyProfile/companyProfile.html
@@ -1,7 +1,9 @@
 <div class="col-md-5 blue_part" style="padding-left: 0;">
 
     <div class="I_O_ri">
-<!--        <div class="I_O_two" ng-bind="companyName"></div>-->
+                    <span>欢迎进入学习平台</span>
+
+        <!--        <div class="I_O_two" ng-bind="companyName"></div>-->
 <!--        <div class="business_statistics" ng-if="isHome" ng-click="goShortcut('/submit/pending')">-->
 <!--            <span class="pic_icon1">-->
 <!--                <i ng-bind="unSubmit"></i>-->
