--- a/development-platform-study-ui/src/main/ui/modules/common/home/directives/reviewFeedback/reviewFeedback.html
+++ b/development-platform-study-ui/src/main/ui/modules/common/home/directives/reviewFeedback/reviewFeedback.html
@@ -1,17 +1,17 @@
 <div class="col-md-12 statistics_box" ng-init="getReviewedInfo()">
     <div class="col-md-8">
         <div class="apply_left mar_t35p">
-            <div class="apply_part apply_add mar_r20p">
-                <p class="c_gray">本月申报增员</p>
-                <p class="c_gray mar_t40p"><span class="c_orage f35p" ng-bind="register"></span>人</p>
-                <a href="" class="apply_btn"  ng-click="goShortcut('/employee/register')">继续增员</a>
-            </div>
-            <div class="apply_part apply_reduce">
-                <p class="c_gray">本月申报减员</p>
-                <p class="c_gray mar_t40p"><span class="c_font_blue f35p" ng-bind="dimission"></span>人</p>
-                <a href="" class="apply_btn"  ng-click="goShortcut('/employee/dimission?fromType=1')">继续减员</a>
+<!--            <div class="apply_part apply_add mar_r20p">-->
+<!--                <p class="c_gray">本月申报增员</p>-->
+<!--                <p class="c_gray mar_t40p"><span class="c_orage f35p" ng-bind="register"></span>人</p>-->
+<!--                <a href="" class="apply_btn"  ng-click="goShortcut('/employee/register')">继续增员</a>-->
+<!--            </div>-->
+<!--            <div class="apply_part apply_reduce">-->
+<!--                <p class="c_gray">本月申报减员</p>-->
+<!--                <p class="c_gray mar_t40p"><span class="c_font_blue f35p" ng-bind="dimission"></span>人</p>-->
+<!--                <a href="" class="apply_btn"  ng-click="goShortcut('/employee/dimission?fromType=1')">继续减员</a>-->
 
-            </div>
+<!--            </div>-->
         </div>
         <div class="apply_right mar_t35p">
 <!--            <div style="position:relative;height:200px;width:500px;margin: 0 auto">-->
@@ -31,18 +31,18 @@
     </div>
     <div class="col-md-4">
         <div class="I_one1 clearfix">
-            <div class="I_Check_til"><i></i>审核业务状态(<span ng-bind="issue"></span>)</div>
-            <div class="I_Check" ng-repeat="rs in reviewedStatus">
-                <!--<div ng-class="'I_Check_text'+rs.image" ng-show="rs.type!==3">-->
-                    <div class="I_Check_text" ng-class="'I_Check_text'+rs.image"><a ng-click="reviewDetailed(rs.type)" class="hand"><span
-                            ng-bind="rs.count"></span></a>
-                        <!--<a ng-show="rs.type===1" ng-click="reviewDetailed(3)">(<span-->
-                                <!--ng-bind="rs.count"></span>件待复核)</a>-->
-                    </div>
-                    <div  ng-class="'I_Check_til_'+rs.color"><span ng-bind="rs.name"></span><i></i></div>
+<!--            <div class="I_Check_til"><i></i>审核业务状态(<span ng-bind="issue"></span>)</div>-->
+<!--            <div class="I_Check" ng-repeat="rs in reviewedStatus">-->
+<!--                &lt;!&ndash;<div ng-class="'I_Check_text'+rs.image" ng-show="rs.type!==3">&ndash;&gt;-->
+<!--                    <div class="I_Check_text" ng-class="'I_Check_text'+rs.image"><a ng-click="reviewDetailed(rs.type)" class="hand"><span-->
+<!--                            ng-bind="rs.count"></span></a>-->
+<!--                        &lt;!&ndash;<a ng-show="rs.type===1" ng-click="reviewDetailed(3)">(<span&ndash;&gt;-->
+<!--                                &lt;!&ndash;ng-bind="rs.count"></span>件待复核)</a>&ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div  ng-class="'I_Check_til_'+rs.color"><span ng-bind="rs.name"></span><i></i></div>-->
 
-                <!--<div ng-if="rs.type!=2" class="I_onefg"></div>-->
-            </div>
+<!--                &lt;!&ndash;<div ng-if="rs.type!=2" class="I_onefg"></div>&ndash;&gt;-->
+<!--            </div>-->
         </div>
     </div>
 
